opam-version: "2.0"
name: "satysfi-fonts-noto-serif-cjk-jp-doc"
version: "2.001ver1+satysfi0.0.4"
synopsis: "Document of SATySFi Font Package for Noto Serif CJK JP fonts"
description: """
Document package for satysfi-fonts-noto-serif-cjk-jp
"""
maintainer: "Yuito Murase <yuito.murase@gmail.com>"
authors: "Yuito Murase <yuito.murase@gmail.com>"
license: "CC0-1.0"
homepage: "https://github.com/zeptometer/SATySFi-fonts-noto-serif-cjk-jp"
bug-reports: "https://github.com/zeptometer/SATySFi-fonts-noto-serif-cjk-jp/issues"
dev-repo: "git+https://github.com/zeptometer/SATySFi-fonts-noto-serif-cjk-jp.git"
depends: [
  "satysfi" {>= "0.0.4" & < "0.0.5"}
  "satyrographos" {>= "0.0.2" & < "0.0.3"}
  "satysfi-base" {>= "1.2.0"}
  "satysfi-fonts-noto-serif-cjk-jp" {= "2.001ver1+satysfi0.0.4"}
]
build: [
  ["satyrographos" "opam" "build"
   "-name" "fonts-noto-serif-cjk-jp-doc"
   "-prefix" "%{prefix}%"
   "-script" "%{build}%/Satyristes"]
]
install: [
  ["satyrographos" "opam" "install"
   "-name" "fonts-noto-serif-cjk-jp-doc"
   "-prefix" "%{prefix}%"
   "-script" "%{build}%/Satyristes"]
]
