opam-version: "2.0"
name: "satysfi-fonts-noto-serif-cjk-jp"
version: "2.001+1+satysfi0.0.4"
synopsis: "SATySFi Font Package for Noto Serif CJK JP fonts"
description: """
SATySFi font package for Noto Serif CJK JP fonts.

This package installs fonts from https://www.google.com/get/noto/.
"""
maintainer: "Yuito Murase <yuito.murase@gmail.com>"
authors: "Yuito Murase <yuito.murase@gmail.com>"
license: "OFL-1.1"
homepage: "https://github.com/zeptometer/SATySFi-fonts-noto-serif-cjk-jp"
bug-reports: "https://github.com/zeptometer/SATySFi-fonts-noto-serif-cjk-jp/issues"
dev-repo: "git+https://github.com/zeptometer/SATySFi-fonts-noto-serif-cjk-jp.git"
extra-source "noto-serif-cjk-jp.zip" {
  archive: "https://github.com/zeptometer/noto-cjk/releases/download/NotoSansV2.001/NotoSerifCJKJp.zip"
  checksum: [
    "sha256=90cf62ca126af39e92c70b569e3a4a3079d72f4e936c05a332513e6f866c5d5d"
    "sha512=7647cecaef8c7a95d295e118d933dbc6d1e73526a0d7a18427b2a1f5a93bc14dc912573f333a37ae12ff92173a4740d60f9899be996e15fd8f8f5997d8363af1"
  ]
}
depends: [
  "satysfi" {>= "0.0.4" & < "0.0.5"}
  "satyrographos" {>= "0.0.2" & < "0.0.3"}
]
build: [
  ["unzip" "-j" "-d" "noto-serif-cjk-jp" "-o" "noto-serif-cjk-jp.zip" "*.otf"]
]
install: [
  ["satyrographos" "opam" "install"
   "-name" "fonts-noto-serif-cjk-jp"
   "-prefix" "%{prefix}%"
   "-script" "%{build}%/Satyristes"]
]
